# finstream-market-risk-data-platform

./: .env.example  .gitignore  README.md  daily_plan.md  deep-research-report.md  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: finstream_market_data_pipeline.py
docs/: architecture.md  data_contract.md
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
notebooks/: market_data_prototype.py  validation_framework_prototype.py  validation_market_data_prototype.py
pipelines/ingestion/: fetch_market_data.py
pipelines/validation/: validate_market_data.py
