[project]
name = "finstream-market-risk-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.9.0",
    "marimo>=0.20.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "yfinance>=1.2.0",
]
